data/derived/sp14/progs/unify/prog4323.ml.out
Characters 48-52:
  | VarX -> "%s" e;;
            ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
